# icrc1-ledger-sample

./: Cargo.toml  README.md  dfx.json
src/icrc1-ledger-sample/: Cargo.toml  icrc1-ledger-sample.did
src/icrc1-ledger-sample/src/: lib.rs
